versioned_docs/version-8.8/self-managed/components/orchestration-cluster/zeebe/exporters/camunda-exporter.md
---
id: camunda-exporter
title: "Camunda Exporter"
sidebar_label: "Camunda Exporter"
description: "Use the Camunda Exporter to export Zeebe records to Elasticsearch/OpenSearch without additional importers or data transformations."
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

The Camunda Exporter exports Zeebe records directly to Elasticsearch or OpenSearch. Unlike the Elasticsearch and OpenSearch exporters, it exports records in the format required by Operate and Tasklist, so you don’t need to configure additional importers or data transformations.

Using the Camunda Exporter can increase process instance throughput and reduce the latency of changes appearing in Operate and Tasklist.

:::note
When exporting, indexes are created as required and not recreated if they already exist. However, disabling the exporter does not delete indexes. Administrators must handle deletions. You can configure a [retention policy](./camunda-exporter.md?configuration=retention#options) to automatically delete data after a set number of days.
:::

## Configuration

Camunda Exporter is enabled by default if secondary storage is configured to use Elasticsearch or OpenSearch. See the properties prefixed with `CAMUNDA_DATA_SECONDARYSTORAGE` in [secondary-storage configuration properties](/self-managed/components/orchestration-cluster/core-settings/configuration/properties.md#secondary-storage).

:::info Helm values mapping
The option names in the tabs below (for example, `rolloverInterval`) are exporter option names, not top-level Helm values keys.

In Helm, configure these as Orchestration Cluster application properties using `orchestration.extraConfiguration` (or `orchestration.configuration`).

For example, set history rollover using:

- `camunda.data.secondary-storage.elasticsearch.history.rollover-interval`
- `camunda.data.secondary-storage.opensearch.history.rollover-interval`
  :::

You can also configure the following properties using exporter `args`:

```yaml
zeebe:
  brokers:
    exporters:
      # Camunda Exporter ----------
      # An example configuration for the camunda exporter:
      #
      # These setting can also be overridden using the environment variables "ZEEBE_BROKER_EXPORTERS_CAMUNDAEXPORTER_..."
      # To convert a YAML formatted variable to an environment variable, start with the top-level property and separate every nested property with an underscore (_).
      # For example, the property "zeebe.broker.exporters.camundaexporter.args.index.numberOfShards" would be converted to "ZEEBE_BROKER_EXPORTERS_CAMUNDAEXPORTER_ARGS_INDEX_NUMBEROFSHARDS".
      #
      camundaexporter:
        args:
```

| Option       | Description                                                                                           | Default |
| ------------ | ----------------------------------------------------------------------------------------------------- | ------- |
| connect      | Connection configuration options. See [Connect](./camunda-exporter.md?configuration=connect#options). |         |
| index        | Index configuration options. See [Index](./camunda-exporter.md?configuration=index#options).          |         |
| bulk         | Bulk configuration options. See [Bulk](./camunda-exporter.md?configuration=bulk#options).             |         |
| history      | Retention configuration options. See [History](./camunda-exporter.md?configuration=history#options).  |         |
| createSchema | If `true`, checks schema readiness before exporting.                                                  | true    |

### Options

<Tabs groupId="configuration" defaultValue="index" queryString
values={[{label: 'Connect', value: 'connect' },{label: 'Index', value: 'index' },{label: 'Bulk', value: 'bulk' },{label: 'Retention', value: 'retention' },{label: 'History', value: 'history' },{label: 'Tasklist', value: 'tasklist' },{label: 'Other', value: 'other' }]} >

<TabItem value="connect">

Helm property path prefix for these options:
`camunda.data.secondary-storage.{elasticsearch|opensearch}.`

:::note
Please refer to [supported environments](/reference/supported-environments.md#camunda-8-self-managed) to find out which
versions of Elasticsearch and/or OpenSearch are supported in a Camunda 8 Self-Managed setup.
:::

| Option         | Description                                                                                                                   | Default                     |
| -------------- | ----------------------------------------------------------------------------------------------------------------------------- | --------------------------- |
| dateFormat     | Defines a custom date format that should be used for fetching date data from the engine (should be the same as in the engine) | yyyy-MM-dd'T'HH:mm:ss.SSSZZ |
| socketTimeout  | Defines the socket timeout in milliseconds, which is the timeout for waiting for data.                                        |                             |
| connectTimeout | Determines the timeout in milliseconds until a connection is established.                                                     |                             |

:::note
If you are using `opensearch` on AWS, the AWS SDK's [DefaultCredentialsProvider](https://sdk.amazonaws.com/java/api/latest/software/amazon/awssdk/auth/credentials/DefaultCredentialsProvider.html) is used for authentication. For more details on configuring credentials, refer to the [AWS SDK documentation](https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/credentials-chain.html#credentials-default).
:::

</TabItem>

<TabItem value="index">

Helm property path prefix for these options:
`camunda.data.secondary-storage.{elasticsearch|opensearch}.`

| Option                | Description                                                                                                                                                                                 | Default |
| --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| numberOfShards        | The number of [shards](https://www.elastic.co/guide/en/elasticsearch/reference/current/index-modules.html#_static_index_settings) used for each created index.                              | 1       |
| numberOfReplicas      | The number of shard [replicas](https://www.elastic.co/guide/en/elasticsearch/reference/current/index-modules.html#dynamic-index-settings) used for each created index.                      | 1       |
| variableSizeThreshold | Defines a threshold for variable size. Variables exceeding this threshold are split into two properties: `FULL_VALUE` (full content, not indexed) and `VALUE` (truncated content, indexed). | 8191    |
| shardsByIndexName     | A map where the key is the index name and the value is the number of shards, allowing you to override the default `numberOfShards` setting for specific indices.                            |         |
| replicasByIndexName   | A map where the key is the index name and the value is the number of replicas, allowing you to override the default `numberOfReplicas` setting for specific indices.                        |         |

</TabItem>

<TabItem value="bulk">

Helm property path prefix for these options:
`camunda.data.secondary-storage.{elasticsearch|opensearch}.bulk.`

To avoid too many expensive requests to the Elasticsearch/OpenSearch cluster, the exporter performs batch
updates by default. The size of the batch, along with how often it should be flushed (regardless of
size) can be controlled by configuration.

| Option | Description                                                                                                                                                    | Default |
| ------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| delay  | Delay, in seconds, before force flush of the current batch. This ensures that even when we have low traffic of records, we still export every once in a while. | `5`     |
| size   | The amount of records a batch should have before we flush the batch.                                                                                           | `1000`  |

With the default configuration, the exporter will aggregate records and flush them to Elasticsearch/OpenSearch:

1. When it has aggregated 1000 records.
2. Five seconds have elapsed since the last flush (regardless of how many
   records were aggregated).

</TabItem>

<TabItem value="retention">

Helm property path prefix for these options:
`camunda.data.secondary-storage.retention.`

A retention policy can be set up to delete old data.
When enabled, this creates an Index Lifecycle Management (ILM) Policy that deletes the data after the specified
`minimumAge`.
All index templates created by this exporter apply the created ILM Policy.

| Option                 | Description                                                                                                                                                                        | Default                                  |
| ---------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------- |
| enabled                | If `true` the ILM Policy is created and applied to the index templates.                                                                                                            | `false`                                  |
| minimumAge             | Specifies how old the data must be, before the data is deleted as a duration.                                                                                                      | `30d`                                    |
| policyName             | The name of the created and applied ILM policy.                                                                                                                                    | `camunda-retention-policy`               |
| usageMetricsMinimumAge | Specifies how old the usage metrics data must be, before the data is deleted as a duration. Applies to `camunda-usage-metric-8.8.0_` and `camunda-usage-metric-tu-8.8.0_` indices. | `730d`                                   |
| usageMetricsPolicyName | The name of the created and applied usage metrics ILM policy.                                                                                                                      | `camunda-usage-metrics-retention-policy` |

:::note
The duration can be specified in days `d`, hours `h`, minutes `m`, seconds `s`, milliseconds `ms`, and/or nanoseconds
`nanos`.
:::

</TabItem>

<TabItem value="history">

Helm property path prefix for these options:
`camunda.data.secondary-storage.{elasticsearch|opensearch}.history.`

For example, `rolloverInterval` maps to:
`camunda.data.secondary-storage.{elasticsearch|opensearch}.history.rollover-interval`.

To keep the main runtime index performant, documents are periodically moved into historical
indices. The history can be configured as follows:

| Option                       | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | Default |
| ---------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| elsRolloverDateFormat        | Defines how date values are formatted for historical indices using Java DateTimeFormatter syntax. If no format is specified, the first date format defined in the field mapping is used.                                                                                                                                                                                                                                                                                                                                                                                                                                     | `date`  |
| rolloverInterval             | The rollover period before an active index is rolled over. This means that `rolloveInterval` is the time gap between updates of historical indexes, therfore for a index `index-abc` and a `rolloverInterval` of 7 days (`7d`) we will have the historical indexes `index-abc-2025-01-01`, `index-abc-2025-01-08` and so on. The `elsRolloverDateFormat` must have sufficient resolution to compute the `rolloverInterval`. For example, if the `rolloverInterval` is `1h`, then the `elsRolloverDateFormat` should be `yyyy-MM-dd-HH`. Additionally, `rolloverInterval` cannot use seconds (`s`) or minutes (`m`) as units. | `1d`    |
| usageMetricsRolloverInterval | The rollover period for usage metric indices before an active index is rolled over. Behaves the same way as the `rolloveInterval` but applies only to `usage-metric`, `usage-metric-tu` indices and only values of `1-4w` and `1M` are allowed.                                                                                                                                                                                                                                                                                                                                                                              | `1M`    |
| rolloverBatchSize            | Maximum number of process instances selected for archiving per run. Defaults to 500 when `archiveByIdEnabled` is `true`, and 100 when `false`. Set to 500 or higher when using `archiveByIdEnabled` to maintain a healthy pipeline of data.                                                                                                                                                                                                                                                                                                                                                                                  | `500`   |
| archiveByIdEnabled           | When `true`, archiving moves documents in small, targeted batches instead of attempting to move all relevant records in a single attempt. This incrementally continues until all documents for the selected process instances have been archived to the relevant dated indices. There are no changes to the core archiving concept - data is still moved to the same dated destination indices. When archiving by ID, archiving is executed in a less resource-intensive manner, which improves stability. Configure using `ZEEBE_BROKER_EXPORTERS_CAMUNDAEXPORTER_ARGS_HISTORY_ARCHIVEBYIDENABLED`.                         | `true`  |
| reindexBatchSize             | Number of individual Elasticsearch/OpenSearch documents archived in each targeted batch when `archiveByIdEnabled` is `true`. Configure using `ZEEBE_BROKER_EXPORTERS_CAMUNDAEXPORTER_ARGS_HISTORY_REINDEXBATCHSIZE`.                                                                                                                                                                                                                                                                                                                                                                                                         | `2500`  |
| waitPeriodBeforeArchiving    | Grace period during which completed process instances are excluded from archiving. For example, with a value of `1h`, any process instances completed within the last hour will not be archived.                                                                                                                                                                                                                                                                                                                                                                                                                             | `1h`    |
| delayBetweenRuns             | Time in milliseconds between archiving runs for completed process instances.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | `2000`  |
| maxDelayBetweenRuns          | The maximum delay between archive runs when using an exponential backoff strategy in case of unsuccessful archiving attempts.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | `60000` |
| processInstanceEnabled       | If `true`, enables the archiving of the completed process instances and their related objects.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | `true`  |
| retention                    | Refer to [Retention](./camunda-exporter.md?configuration=retention#options) for retention configuration options.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |         |

</TabItem>

<TabItem value="tasklist">

Helm property path prefix for this Tasklist-specific export option: `camunda.data.secondary-storage.{elasticsearch|opensearch}.`

| Option                            | Description                                                                                                                                                                                                                                                                                                                                                                                                                                   | Default |
| --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| skipVariableWriteWithoutUserTasks | If `true`, the exporter skips writing task variable data to the `tasklist-task` index for process definitions that do not contain any user task flow node instances. This reduces index size and improves write and read performance by avoiding the persistence of task data that is never queried through Tasklist. The exporter uses the process cache to determine whether a deployed process definition contains at least one user task. | `false` |

:::warning Process instance migration limitation
When `skipVariableWriteWithoutUserTasks` is enabled, task variable data is not exported for process definitions without user tasks. If a process instance is later [migrated](/components/concepts/process-instance-migration.md) to a process definition version that **does** contain user tasks, variable data that was previously skipped is **not** retroactively backfilled. As a result, process-level variable filters in task search only match process instances that were created on a process definition version that already contained user tasks (that is, on or after the version introducing user tasks). For migrated instances, only variables exported **after** the migration (from new variable update events) appear in task search results.
:::

</TabItem>

<TabItem value="other">

Helm property path prefix for these options:
`camunda.data.secondary-storage.{elasticsearch|opensearch}.batch-operations.`

Other miscellaneous properties:

| Option                               | Description                                                                                                                                                                                                                                                                                                                                                                                 | Default |
| ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
| batchOperation.exportItemsOnCreation | Defines whether the pending items of a started batch operation should be exported from the beginning. For very large batch operations involving more than 100,000 process instances, this can cause temporary performance issues due to the high volume of document insertions. If set to `false`, the "has pending batch operations" spinner in the Operate UI will not function properly. | `true`  |

</TabItem>
</Tabs>

## Example

Here is an example configuration of the exporter:

```yaml
---
exporters:
  # Camunda Exporter ----------
  # An example configuration for the camunda exporter:
  #
  # These setting can also be overridden using the environment variables "ZEEBE_BROKER_EXPORTERS_CAMUNDAEXPORTER_..."
  # To convert a YAML formatted variable to an environment variable, start with the top-level property and separate every nested property with an underscore (_).
  # For example, the property "zeebe.broker.exporters.camundaexporter.args.index.numberOfShards" would be converted to "ZEEBE_BROKER_EXPORTERS_CAMUNDAEXPORTER_ARGS_INDEX_NUMBEROFSHARDS".
  #
  camundaexporter:
    args:
      connect:
        dateFormat: yyyy-MM-dd'T'HH:mm:ss.SSSZZ
        socketTimeout: 1000
        connectTimeout: 1000

      bulk:
        delay: 5
        size: 1000

      index:
        numberOfShards: 3
        numberOfReplicas: 0

      history:
        elsRolloverDateFormat: "date"
        rolloverInterval: "1d"
        rolloverBatchSize: 500
        archiveByIdEnabled: true
        reindexBatchSize: 2500
        waitPeriodBeforeArchiving: "1h"
        delayBetweenRuns: 2000
        maxDelayBetweenRuns: 60000
        processInstanceEnabled: true
        retention:
          enabled: false
          minimumAge: 30d
          policyName: camunda-retention-policy
          usageMetricsMinimumAge: 730d
          usageMetricsPolicyName: camunda-usage-metrics-retention-policy

        batchOperation:
          exportItemsOnCreation: true

      skipVariableWriteWithoutUserTasks: false

      createSchema: true
```
